--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,7 @@
-$brand-color:         #00C6E0;
+$brand-color:         #DBD8D1;
 $highlight:           lighten($brand-color, 35%);
-$text-color:          #13294B;
-$muted-text-color:    #E01A00;
+$text-color:          #000000;
+$muted-text-color:    #bd232d;
 $font-family:         "EB Garamond", Garamond, "Times New Roman", serif;
 
 $on-bigphone:         375px;
