--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,7 @@
-$brand-color:         #DBD8D1;
+$brand-color:         #6FF9E7;
 $highlight:           lighten($brand-color, 35%);
 $text-color:          #000000;
-$muted-text-color:    #bd232d;
+$muted-text-color:    #e12729;
 $font-family:         "EB Garamond", Garamond, "Times New Roman", serif;
 
 $on-bigphone:         375px;
